gcc/testsuite/rust/rustc/ui/inference/need_type_info/do-not-suggest-generic-arguments-for-turbofish_dg.rs
enum OhNo<T, U> {
    A(T),
    B(U),
    C,
}

fn uwu() {
    OhNo::C::<u32, _>; // { dg-error ".E0282." "" { target *-*-* } }
}

fn main() {}

